# phrasal_verbs_learning_bot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  prompt.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
data/: bot.db-shm  known_list.txt  phrasal_verbs_it_deduplicated_final.csv  seed_cards.csv  seed_cards.json
data/wikionary/: out.csv  phrasal_verbs.all.csv
prompts/: 00_initial.md  01_add_round_completion_flow.md  02_improve_ui.md  03_improve_config_menu.md  04_add_codex_based_data_generator.md  05_update_card_rendering_and_randomize_order.md  06_implement_quiz_feature.md  07_impelement_explain_feature.md
scripts/: build_known_list.py  dedupe_phrasals.py  export_cards.py  gen_phrasals_via_codex.py  seed_cards.py
scripts/wikionary/: fetch_wiki_phrasals.py  make_phrasal_batches.py
srsbot/: __init__.py  config.py  content.py  db.py  explain_client.py  formatters.py  keyboards.py  main.py  models.py  queue.py  scheduler.py  session.py  srs.py  ui.py  validators.py
srsbot/handlers/: config.py  help.py  menu.py  pack.py  packs.py  quiz.py  settings.py  snooze.py  start.py  stats.py  today.py
tests/: test_content.py  test_csv_schema.py  test_explain_cache.py  test_explain_flow.py  test_explain_prompt.py  test_format_card_html.py  test_generator_prompt.py  test_known_list.py  test_markdown_to_html.py  test_queue.py  test_queue_shuffle.py  test_quiz_build.py  test_quiz_flow.py  test_settings_quiz_limit.py  test_srs.py
